// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should hides error by default 1`] = `
<div
  className={undefined}
>
  <label
    htmlFor="example-optional"
    style={
      Object {
        "display": "block",
      }
    }
  >
    First Name
     
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
       *
    </span>
  </label>
  <input
    className={undefined}
    id="example-optional"
    name="firstname"
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value={undefined}
  />
</div>
`;

exports[`TextInput should shows error when error is set 1`] = `
<div
  className={undefined}
>
  <label
    htmlFor="example-optional"
    style={
      Object {
        "display": "block",
      }
    }
  >
    First Name
     
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
       *
    </span>
  </label>
  <input
    className={undefined}
    id="example-optional"
    name="firstname"
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value={undefined}
  />
  <div
    className={undefined}
  >
    First name is required.
  </div>
</div>
`;
